[package]
name = "rip_converter"
version = "0.1.0"
authors = ["Fingercomp <fingercomp@users.noreply.github.com>"]

[dependencies]
clap = "2.27.1"
tempfile = "2.2.0"
byteorder = "1.1.0"

[dependencies.ffmpeg]
# git = "https://github.com/meh/rust-ffmpeg.git"
git = "https://github.com/pornel/rust-ffmpeg.git"
